human-intervention-logs/org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3/gradle-test/gradle-test-2026-07-08T21-35-28-058046Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3
Command: `/home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 5 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/tests/src/org.springdoc/springdoc-openapi-starter-webmvc-ui/3.0.3/src/test/java/org_springdoc/springdoc_openapi_starter_webmvc_ui/Springdoc_openapi_starter_webmvc_uiTest.java:22: error: package org.springframework.boot.web.servlet.context does not exist
import org.springframework.boot.web.servlet.context.ServletWebServerApplicationContext;
                                                   ^
/home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/tests/src/org.springdoc/springdoc-openapi-starter-webmvc-ui/3.0.3/src/test/java/org_springdoc/springdoc_openapi_starter_webmvc_ui/Springdoc_openapi_starter_webmvc_uiTest.java:39: error: cannot find symbol
        int port = ((ServletWebServerApplicationContext) applicationContext).getWebServer().getPort();
                     ^
  symbol:   class ServletWebServerApplicationContext
  location: class Springdoc_openapi_starter_webmvc_uiTest
2 errors


[Incubating] Problems report is available at: file:///home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/tests/src/org.springdoc/springdoc-openapi-starter-webmvc-ui/3.0.3/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.


Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
* What went wrong:

Execution failed for task ':compileTestJava'.
You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
> 
Compilation failed; see the compiler output below.
For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
  /home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/tests/src/org.springdoc/springdoc-openapi-starter-webmvc-ui/3.0.3/src/test/java/org_springdoc/springdoc_openapi_starter_webmvc_ui/Springdoc_openapi_starter_webmvc_uiTest.java:39: error: cannot find symbol
13 actionable tasks: 1 executed, 12 up-to-date
          int port = ((ServletWebServerApplicationContext) applicationContext).getWebServer().getPort();
                       ^
    symbol:   class ServletWebServerApplicationContext
    location: class Springdoc_openapi_starter_webmvc_uiTest
  /home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/tests/src/org.springdoc/springdoc-openapi-starter-webmvc-ui/3.0.3/src/test/java/org_springdoc/springdoc_openapi_starter_webmvc_ui/Springdoc_openapi_starter_webmvc_uiTest.java:22: error: package org.springframework.boot.web.servlet.context does not exist
  import org.springframework.boot.web.servlet.context.ServletWebServerApplicationContext;
                                                     ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 15s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/mihailo/git/graalvm-reachability-metadata-copy/forge/local_repositories/forge_worktrees/7020-b9654ea1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 19s
9 actionable tasks: 1 executed, 8 up-to-date
